<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="_42s_pa_12345_12345">42S PA 12345 12345</string>
    <string name="_45_sec">12:42:30</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">ATOS</string>
    <string name="broadcast">Broadcast</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="call_sign">Call Sign</string>
    <string name="call_sign_hint">Call Sign</string>
    <string name="color_spinner_prompt">Select A Color</string>
    <string name="connected_status">Connected</string>
    <string name="copy">Copy</string>
    <string name="dash">---</string>
    <string name="data_points_label">Points:</string>
    <string name="date_time_default">[Date Time]</string>
    <string name="default_gotenna_distance">1000</string>
    <string name="default_gotenna_refresh">60</string>
    <string name="direction">Direction</string>
    <string name="disconnected">Disconnected</string>
    <string name="distance">Distance</string>
    <string name="distance_label">Distance (m)</string>
    <string name="elevation">Elevation:</string>
    <string name="expand_button_title">Advanced</string>
    <string name="first_event_time_default">N/A</string>
    <string name="gotenna_distance_threshold">GoTenna Distance Threshold (meters)</string>
    <string name="gotenna_refresh_rate">GoTenna Send Rate (seconds)</string>
    <string name="heading">Heading</string>
    <string name="key_pref_bluetooth">atos_service_enabled</string>
    <string name="key_pref_gotenna">atos_gotenna_enabled</string>
    <string name="key_pref_gotenna_distance_threshold">atos_gotenna_distance_threshold</string>
    <string name="key_pref_gotenna_refresh">atos_gotenna_refresh_rate</string>
    <string name="key_pref_hide_stale">atos_hide_stale</string>
    <string name="key_pref_legacy_history_uid">atos_legacy_history_uid</string>
    <string name="key_pref_only_current_manifest_visible">atos_only_current_manifest_enabled</string>
    <string name="last_event_time_default">N/A</string>
    <string name="last_report">Last Report:</string>
    <string name="latest">Latest:</string>
    <string name="m_s">m/s</string>
    <string name="manifest_name">Name:</string>
    <string name="n_a">N/A</string>
    <string name="not_set">Not set</string>
    <string name="pl_connected">Status:</string>
    <string name="place_holder_cs">Super Long Callsign 69</string>
    <string name="points_number_default">[0]</string>
    <string name="preference_copied">\"%1$s\" copied to clipboard.</string>
    <string name="search_menu_title">Search</string>
    <string name="speed">Speed</string>
    <string name="start">Start:</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="stop">Stop:</string>
    <string name="summary_collapsed_preference_list">%1$s, %2$s</string>
    <string name="tag_id">Tag ID:</string>
    <string name="tag_id_range_end">Tag ID End</string>
    <string name="tag_id_range_start">Tag ID Start</string>
    <string name="temperature">Temperature</string>
    <string name="track_value_default">[track value]</string>
    <string name="tracks_label">Tracks:</string>
    <string name="type_spinner_prompt">Select A Track Type</string>
    <string name="u00b0">°</string>
    <string name="v7_preference_off">OFF</string>
    <string name="v7_preference_on">ON</string>
    <string name="versionName">2.4.0.1 (9910af0a) - [5.4.0]</string>
    <string name="vert_speed">Vert Speed:</string>
    <string name="voltage">Voltage:</string>
</resources>
