<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General">
        <SwitchPreference android:title="Bluetooth Enabled" android:key="@string/key_pref_bluetooth" android:summary="Is Bluetooth Enabled?" android:defaultValue="false" />
        <SwitchPreference android:title="Hide Stale" android:key="@string/key_pref_hide_stale" android:summary="Hide Stale Tracks?" android:defaultValue="false" />
        <SwitchPreference android:title="Current manifest visible" android:key="@string/key_pref_only_current_manifest_visible" android:summary="Other manifest tags will not be visible" android:defaultValue="false" />
        <SwitchPreference android:title="Legacy Track History Summaries" android:key="@string/key_pref_legacy_history_uid" android:summary="Show full summary for older track history recordings (slower)" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="GoTenna">
        <SwitchPreference android:title="goTenna Enabled" android:key="@string/key_pref_gotenna" android:summary="Is goTenna Enabled?" android:defaultValue="false" />
        <EditTextPreference android:title="@string/gotenna_refresh_rate" android:key="@string/key_pref_gotenna_refresh" android:summary="More time between sends will save battery for your GoTenna when GoTenna mode is enabled." android:defaultValue="@string/default_gotenna_refresh" android:dialogTitle="@string/gotenna_refresh_rate" android:dialogMessage="Enter a number between 30 and 300 (seconds)." />
        <EditTextPreference android:title="@string/gotenna_distance_threshold" android:key="@string/key_pref_gotenna_distance_threshold" android:summary="How far does a tag have to move to force a GoTenna update?" android:defaultValue="@string/default_gotenna_distance" android:dialogTitle="@string/gotenna_distance_threshold" android:dialogMessage="Enter a number between 1000 and 2000 (meters)." />
    </PreferenceCategory>
</PreferenceScreen>
