<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/current_recording_holder_frag_recording_list" android:background="@drawable/btn_team" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="6.0dip" android:paddingEnd="6.0dip">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="6.0">
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="CURRENT RECORDING" android:layout_weight="5.0" />
            <ImageView android:id="@id/expanded_caret_frag_recording_list" android:paddingRight="8.0dip" android:layout_height="32.0dip" android:src="@drawable/selector_extras_caret" android:layout_weight="1.0" style="@style/caret_extras_drop_down" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="2.0" android:paddingStart="24.0dip">
            <LinearLayout style="@style/atos_track_history_column">
                <LinearLayout style="@style/atos_track_history_layout_pair">
                    <TextView android:text="@string/tracks_label" style="@style/atos_track_history_archive_element_lbl" />
                    <TextView android:id="@id/txt_atos_record_list_current_track_count" android:text="@string/track_value_default" style="@style/atos_track_history_archive_element_val" />
                </LinearLayout>
                <LinearLayout style="@style/atos_track_history_layout_pair">
                    <TextView android:text="@string/data_points_label" style="@style/atos_track_history_archive_element_lbl" />
                    <TextView android:id="@id/txt_atos_record_list_current_point_count" android:text="@string/points_number_default" style="@style/atos_track_history_archive_element_val" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout style="@style/atos_track_history_column">
                <LinearLayout style="@style/atos_track_history_layout_pair">
                    <TextView android:text="@string/start" style="@style/atos_track_history_archive_element_lbl" />
                    <TextView android:id="@id/txt_atos_record_list_current_start_time" android:text="@string/date_time_default" style="@style/atos_track_history_archive_element_val" />
                </LinearLayout>
                <LinearLayout style="@style/atos_track_history_layout_pair">
                    <TextView android:text="@string/latest" style="@style/atos_track_history_archive_element_lbl" />
                    <TextView android:id="@id/txt_atos_record_list_current_end_time" android:text="@string/date_time_default" style="@style/atos_track_history_archive_element_val" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:id="@id/linear_item_extras_frag_recording_list" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="4.0">
            <ImageButton android:id="@id/ibtn_details_frag_recording_list" android:src="@drawable/ic_details" android:layout_weight="1.0" style="@style/btn_image_list_item" />
            <Button android:textSize="16.0dip" android:id="@id/btn_archive_and_start_new_frag_recording_list" android:text="New" android:layout_weight="1.0" style="@style/btn_image_list_item" />
        </LinearLayout>
    </LinearLayout>
    <View style="@style/atos_horizontal_line" />
    <androidx.recyclerview.widget.RecyclerView android:id="@id/recycler_atos_frag_recording_list" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
</LinearLayout>
