<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/ll_track_item_root" android:background="@color/black" android:descendantFocusability="blocksDescendants" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="2.0dip" android:baselineAligned="false" android:weightSum="3.0">
        <LinearLayout android:gravity="center" android:layout_gravity="center_vertical" android:orientation="vertical" android:paddingBottom="2.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.5">
            <ImageView android:id="@id/iv_track_item_type" android:layout_width="56.0dip" android:layout_height="56.0dip" android:layout_margin="4.0dip" android:src="@drawable/ic_track_pax_large" />
            <LinearLayout android:gravity="center" android:layout_gravity="bottom" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip">
                <TextView android:textSize="11.0sp" android:textStyle="bold|italic" android:textColor="@color/light_grey" android:gravity="start|center" android:layout_gravity="start|center" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:text="@string/tag_id" android:textAllCaps="true" />
                <TextView android:textSize="11.0sp" android:textStyle="bold|italic" android:textColor="@color/light_grey" android:id="@id/tv_track_item_tag_id" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:text="11" android:textAllCaps="true" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:paddingBottom="2.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <LinearLayout android:gravity="start|center" android:layout_gravity="start|center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip">
                <TextView android:textSize="11.0sp" android:textStyle="bold|italic" android:textColor="@color/light_grey" android:gravity="center" android:layout_gravity="center" android:id="@id/tv_track_item_callsign" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="1.0dip" android:text="@string/place_holder_cs" android:maxLines="1" android:textAllCaps="true" />
                <View android:background="#ff333333" android:layout_width="2.0dip" android:layout_height="24.0dip" android:layout_margin="2.0dip" />
                <ImageView android:layout_gravity="center" android:id="@id/iv_track_item_extras" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dip" android:src="@drawable/ic_caret_down" android:tint="@color/blue" />
            </LinearLayout>
            <TextView android:textSize="12.0sp" android:textColor="@color/med_grey" android:id="@id/txt_track_item_manifest_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="manifest name" android:layout_marginStart="2.0dip" />
            <LinearLayout android:gravity="start|center" android:layout_gravity="start|center" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip">
                <ImageView android:gravity="center_vertical" android:layout_gravity="center" android:id="@id/iv_track_item_connection_status" android:visibility="visible" android:layout_width="6.0dip" android:layout_height="16.0dip" android:layout_margin="2.0dip" android:src="@drawable/light_green" />
                <TextView android:textSize="12.0sp" android:textStyle="italic" android:textColor="@color/med_grey" android:gravity="center" android:layout_gravity="center" android:id="@id/txt_track_item_connection_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/connected_status" android:layout_marginStart="2.0dip" />
            </LinearLayout>
            <LinearLayout android:gravity="start|center" android:layout_gravity="start|center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip">
                <TextView android:textSize="12.0sp" android:textColor="@color/light_grey" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/last_report" />
                <TextView android:textSize="12.0sp" android:textColor="@color/med_grey" android:id="@id/tv_track_item_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/_45_sec" android:layout_marginStart="4.0dip" />
            </LinearLayout>
            <TextView android:textSize="12.0sp" android:textColor="@color/med_grey" android:id="@id/tv_track_item_location" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/_42s_pa_12345_12345" android:textAllCaps="true" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:paddingBottom="2.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.5">
            <LinearLayout android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false" android:weightSum="2.0">
                <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <TextView android:textSize="13.0sp" android:textStyle="italic" android:textColor="@color/light_grey" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="32.0sp" android:text="@string/distance" />
                    <View android:layout_gravity="center" android:background="@color/light_grey" android:layout_width="60.0dip" android:layout_height="1.0dip" android:layout_margin="2.0dip" />
                    <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="32.0dip">
                        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/med_grey" android:id="@id/tv_track_item_ownship_distance" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="2.0dip" android:text="@string/dash" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <TextView android:textSize="13.0sp" android:textStyle="italic" android:textColor="@color/light_grey" android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="32.0sp" android:text="@string/direction" />
                    <View android:layout_gravity="center" android:background="@color/light_grey" android:layout_width="60.0dip" android:layout_height="1.0dip" android:layout_margin="2.0dip" />
                    <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="32.0dip">
                        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/med_grey" android:id="@id/tv_track_item_ownship_heading" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="2.0dip" android:text="@string/dash" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="2.0">
                <ImageButton android:layout_gravity="center" android:id="@id/ib_track_item_rab" android:background="@drawable/btn_cancel" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="4.0dip" android:src="@drawable/ic_menu_ruler" android:layout_weight="1.0" />
                <ToggleButton android:textSize="12.0sp" android:textColor="@color/light_grey" android:gravity="center" android:layout_gravity="center" android:id="@id/btn_track_item_broadcast_tag" android:background="@drawable/btn_cancel" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_margin="4.0dip" android:text="@string/broadcast" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_track_item_extras" android:background="@color/darker_gray" android:paddingBottom="2.0dip" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="3.0">
        <LinearLayout android:gravity="center" android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="0.5" />
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="12.0sp" android:textColor="@color/light_grey" android:gravity="start" android:layout_gravity="start|center|top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/elevation" android:textAllCaps="false" />
                <TextView android:textSize="12.0sp" android:textColor="@color/med_grey" android:gravity="start|center" android:layout_gravity="start|center|top" android:id="@id/tv_track_item_elevation" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="------ ft MSL" android:textAllCaps="false" android:layout_marginStart="4.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="12.0sp" android:textColor="@color/light_grey" android:gravity="start" android:layout_gravity="start|center|top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/vert_speed" android:textAllCaps="false" />
                <TextView android:textSize="12.0sp" android:textColor="@color/med_grey" android:gravity="start|center" android:layout_gravity="start|center|top" android:id="@id/tv_track_item_vert_speed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:textAllCaps="false" android:layout_marginStart="4.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="12.0sp" android:textColor="@color/light_grey" android:gravity="start" android:layout_gravity="start|center|top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/voltage" android:textAllCaps="false" />
                <TextView android:textSize="12.0sp" android:textColor="@color/med_grey" android:gravity="start|center" android:layout_gravity="start|center|top" android:id="@id/tv_track_item_voltage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:textAllCaps="false" android:layout_marginStart="4.0dip" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.5">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.5">
                <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.75">
                    <TextView android:textSize="12.0sp" android:textStyle="italic" android:textColor="@color/med_grey" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="32.0sp" android:text="@string/speed" />
                    <View android:layout_gravity="center" android:background="@color/light_grey" android:layout_width="60.0dip" android:layout_height="1.0dip" android:layout_margin="2.0dip" />
                    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/med_grey" android:gravity="top" android:layout_gravity="center" android:id="@id/tv_track_item_speed" android:layout_width="wrap_content" android:layout_height="18.0dip" android:layout_marginTop="2.0dip" android:text="@string/dash" />
                        <TextView android:textSize="10.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="top" android:layout_gravity="top" android:id="@id/tv_speed_units" android:padding="2.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/m_s" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.75">
                    <TextView android:textSize="12.0sp" android:textStyle="italic" android:textColor="@color/med_grey" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="32.0sp" android:text="@string/heading" />
                    <View android:layout_gravity="center" android:background="@color/light_grey" android:layout_width="60.0dip" android:layout_height="1.0dip" android:layout_margin="2.0dip" />
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/med_grey" android:gravity="top" android:layout_gravity="center" android:id="@id/tv_track_item_track_heading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/dash" android:layout_marginStart="18.0dip" />
                        <TextView android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/white" android:gravity="top" android:layout_gravity="top" android:padding="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/u00b0" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
